Fix wrap on posts

--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,24 @@
+.site-title
+{
+  font-size: 100px;
+  padding: 5px;
+}
+
+#posts
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .card
 {
-  float: left;
-  display: inline-block;
-  vertical-align: top;
   height: 215px;
   width: 160px;
   margin-top: 2%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
   margin-left: 2%;
-  margin-right: 1%;
+  margin-right: 2%;
 }
 
 .card-contents
@@ -71,7 +81,7 @@
   border: none;
   border-radius: 30px;
   font-size: 36px;
-  background-color: #f67811;
+  background-color: #299FD6;
   color: #fff;
   cursor: pointer;
   box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
@@ -116,4 +126,3 @@
   margin: 0;
   font-size: 28px;
 }
-
